trocando a foto do bg

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     max-height: 864px;
     position: relative;
     /*background-color: #FFFFFF;*/
-    background: url(../img/bg.jpg) no-repeat center center fixed;
+    background: url(../img/gdg-caxias.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
