--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,700|Raleway:700');
 @import 'helpers/variables';
 @import 'helpers/mixins';
 @import 'base/base';
