--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'helpers/variables';
 @import 'helpers/mixins';
 @import 'base/base';
+@import '../../node_modules/normalize.css';
 @import 'layout/layout';
 @import 'module/menu';
 @import 'module/footer';
