--- a/src/scss/helpers/variables.scss
+++ b/src/scss/helpers/variables.scss
@@ -1,7 +1,7 @@
 $blue: #577EC0;
 $gray: #E0E0E0;
 $yellow: #f7c53b;
-$dark-yellow: darken($light-yellow, 15%);
+$dark-yellow: darken($yellow, 15%);
 $red: #da473b;
 $green: #0f9c56;
 $font-color: #656464;
