--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+*{ box-sizing: border-box; margin:0; padding:0;}
 @import url('https://fonts.googleapis.com/css?family=Lato:300,700|Raleway:700');
 @import 'helpers/variables';
 @import 'helpers/mixins';
@@ -8,4 +9,3 @@
 @import 'module/footer';
 @import 'theme/plain';
 
-*{ box-sizing: border-box;}
