Modificando os imports, visando a modularidade

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,700|Raleway:700");
-@import url(../../node_modules/normalize.css);
+@import url(../../../node_modules/normalize/normalize.css);
 * {
   box-sizing: border-box;
   margin: 0;
