--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,700|Raleway:700");
 @import url(../../../node_modules/normalize/normalize.css);
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0; }
 
@@ -11,13 +12,26 @@ header {
   background-color: #E0E0E0; }
 
 nav {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   padding-top: 15px;
   margin-right: 10px; }
 
 nav > ul {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
   display: inline-flex; }
 
 nav > ul > li {
